--- a/speed/angular.json
+++ b/speed/angular.json
@@ -131,5 +131,9 @@
       }
     }
   },
-  "defaultProject": "speed"
+  "defaultProject": "speed",
+  "cli": {
+    "defaultCollections": "@ngrx/schematics",
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
